[gd_scene load_steps=2 format=3 uid="uid://b4hx5yj1qm6v2"]

[ext_resource type="Script" path="res://online/ui/ContadorOnline.gd" id="1_2k8vp"]

[node name="ContadorVidasOnline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2k8vp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -20.0

[node name="VidasContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VidasIcon" type="Label" parent="VBoxContainer/VidasContainer"]
layout_mode = 2
text = "üíñ"

[node name="LabelVidas" type="Label" parent="VBoxContainer/VidasContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vidas: 3 vs 3"

[node name="MicrojuegoContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MicrojuegoIcon" type="Label" parent="VBoxContainer/MicrojuegoContainer"]
layout_mode = 2
text = "üéÆ"

[node name="LabelMicrojuego" type="Label" parent="VBoxContainer/MicrojuegoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Microjuego: Ninguno"

[node name="OponenteContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OponenteIcon" type="Label" parent="VBoxContainer/OponenteContainer"]
layout_mode = 2
text = "üë§"

[node name="LabelOponente" type="Label" parent="VBoxContainer/OponenteContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Oponente: 3 vidas"

[node name="ProgressContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
text = "Progreso de Vida"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/ProgressContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0

[node name="TimerContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TimerIcon" type="Label" parent="VBoxContainer/TimerContainer"]
layout_mode = 2
text = "‚è∞"

[node name="TimerDisplay" type="Label" parent="VBoxContainer/TimerContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tiempo: 30s"

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusIcon" type="Label" parent="VBoxContainer/StatusContainer"]
layout_mode = 2
text = "üìä"

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Estado: Esperando"